--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,8 +25,16 @@ body{
     color:grey;
 }
 
-/*LINKS*/
+/* LINKS */
 .link--cta{
     font-size: 16px;
     color:aquamarine;
+}
+
+/* FOOTER */
+
+.footer--copyright{
+    font-size: 21px;
+    color:grey;
+    text-align: right;
 }
